# center-dot

./: .gitignore  CMakeLists.txt  CenterDot.pro  README.md
src/: centerdot.rc  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  settings.ui  settingsdata.h  settingsdialog.cpp  settingsdialog.h  version_number.h  version_number.h.in  winkeyboardhook.cpp  winkeyboardhook.h
tools/: deploy_win.bat
